--- a/views/function/navbar.ejs
+++ b/views/function/navbar.ejs
@@ -1,13 +1,26 @@
 <nav class="navbar navbar-expand-sm bg-light">
 
     <ul class="navbar-nav">
-     
+      <li class="nav-item">
+        <a class="nav-link" href="/">Trang chủ</a>
+      </li>
       <li class="nav-item">
         <a class="nav-link" href="/dangki">Đăng kí</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/dangnhap">Đăng nhập</a>
       </li>
+      <% if(name) { %>
+      <li class="nav-item">
+        <a class="nav-link" href="/themthe">Thêm thẻ</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/naptien">Nạp tiền</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/dangxuat">Đăng xuất</a>
+      </li>
+    <% } %>
     </ul>
   
   </nav>
