--- a/views/function/navbar.ejs
+++ b/views/function/navbar.ejs
@@ -4,12 +4,15 @@
       <li class="nav-item">
         <a class="nav-link" href="/">Trang chủ</a>
       </li>
+     <% if(name == ""){ %>
+     
       <li class="nav-item">
         <a class="nav-link" href="/dangki">Đăng kí</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/dangnhap">Đăng nhập</a>
       </li>
+      <% } %>
       <% if(name) { %>
       <li class="nav-item">
         <a class="nav-link" href="/themthe">Thêm thẻ</a>
@@ -19,6 +22,9 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/dangxuat">Đăng xuất</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/">Xin chào <%- name %></a>
       </li>
     <% } %>
     </ul>
