--- a/views/cms/foods/index.ejs
+++ b/views/cms/foods/index.ejs
@@ -15,7 +15,7 @@
     .wrap-detail>div.card {
         margin: 0px;
         padding: 0px;
-        width: 445px;
+        width: 460px;
         /* height: 500px; */
         min-width: 300px;
     }
@@ -85,19 +85,20 @@
                 <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                     <thead>
                         <tr>
-                            <th style="text-align: center;">STT</th>
-                            <th style="text-align: center;">Hình ảnh</th>
+                            <th style="text-align: center; width: 20px;">STT</th>
+                            <th style="text-align: center; width: 160px;">Hình ảnh</th>
                             <th style="text-align: center;">Món ăn</th>
                             <th style="text-align: center;">Giá</th>
-                            <th style="text-align: center;">Menu</th>
-                            <th style="text-align: center;">Action</th>
+                            <th style="text-align: center; width: 20px;">Menu</th>
+                            <th style="text-align: center; width: 50px;">Action</th>
                         </tr>
                     </thead>
                     <tbody>
                         <% data.forEach((element, index) => { %>
                         <tr>
                             <td><%= index+1 %> </td>
-                            <td><%= element.image %> </td>
+                            <td><img src="/uploads/foods/<%= element.image %>" alt=""
+                                    style="width:150px; height:120px; object-fit:cover"></td>
                             <td style="text-align: left;"><%= element.title %> </td>
                             <td style="text-align: right;"><%= element.price %> </td>
                             <td>
@@ -118,7 +119,8 @@
                                     <div class="dropdown-menu dropdown-primary">
                                         <a class="dropdown-item edit" href="#" item_id=<%= element.id %>>Chỉnh
                                             sửa</a>
-                                        <a class="dropdown-item delect" href="/cms/foods/delete/<%= element.id %>" item_id=<%= element.id %>>Xóa</a>
+                                        <a class="dropdown-item delect" href="/cms/foods/delete/<%= element.id %>"
+                                            item_id=<%= element.id %>>Xóa</a>
                                     </div>
                                 </div>
                                 <!--/Dropdown primary-->
@@ -147,13 +149,25 @@
             <div class="card-body px-lg-5 pt-0">
 
                 <!-- Form -->
-                <form style="color: #757575;" action="" method="POST" id="form">
+                <form style="color: #757575;" action="" method="POST" id="form" enctype="multipart/form-data">
 
                     <!-- First name -->
-                    <div class="md-form">
-                        <label for="title" class="">Tên món ăn</label>
-                        <input type="text" id="title" name="title" class="form-control">
+                    <div class="row">
+                        <div class="col-8">
+                            <div class="md-form">
+                                <label for="title" class="">Tên món ăn</label>
+                                <input type="text" id="title" name="title" class="form-control">
 
+                            </div>
+                            <div class="md-form">
+                                <label for="price" class="">Giá</label>
+                                <input type="number" id="price" name="price" class="form-control">
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <img src="/uploads/foods/default.png" alt="" id="image"
+                                style="width: 100%; height: 110px; object-fit: fill; margin-top: 30px;">
+                        </div>
                     </div>
                     <section class="section-preview">
 
@@ -162,17 +176,13 @@
                                 <span class="input-group-text" id="inputGroupFileAddon01">Upload</span>
                             </div>
                             <div class="custom-file">
-                                <input type="file" class="custom-file-input" id="image" name="image">
-                                <label class="custom-file-label" for="image">Ảnh món ăn</label>
+                                <input type="file" class="custom-file-input" id="input_image" name="image">
+                                <label class="custom-file-label" for="input_image">Ảnh món ăn</label>
                             </div>
                         </div>
 
                     </section>
                     <!-- Last name -->
-                    <div class="md-form">
-                        <label for="price" class="">Giá</label>
-                        <input type="number" id="price" name="price" class="form-control">
-                    </div>
                     <div class="form-group">
                         <label for="description" class="">Mô tả</label>
                         <textarea class="form-control rounded-0" id="description" name="description" rows="3"
@@ -204,7 +214,12 @@
         e.preventDefault();
         var temp = document.getElementById("tem-add");
         var clon = temp.content.cloneNode(true);
-        clon.getElementById("form").setAttribute("action","");
+        clon.getElementById("form").setAttribute("action", "");
+        $(clon.getElementById("input_image")).change(function (e) {
+            e.preventDefault();
+            console.log(e.currentTarget.files);
+            $("#image").attr("src", URL.createObjectURL(e.currentTarget.files[0]));
+        });
         document.body.appendChild(clon);
         $(".wrap-detail").click(function (e) {
             if (e.currentTarget == e.target) {
@@ -250,9 +265,15 @@
                         console.log(temp);
                         clon.getElementById("title").value = response.title;
                         clon.getElementById("price").value = response.price;
-                        clon.getElementById("in_menu").checked = response.in_menu?true:false;
+                        clon.getElementById("image").src = "/uploads/foods/" + response.image;
+                        clon.getElementById("in_menu").checked = response.in_menu ? true : false;
                         clon.getElementById("description").value = response.description;
-                        clon.getElementById("form").setAttribute("action","foods/update/"+response.id);
+                        clon.getElementById("form").setAttribute("action", "foods/update/" + response.id);
+                        $(clon.getElementById("input_image")).change(function (e) {
+                            e.preventDefault();
+                            console.log(e.currentTarget.files);
+                            $("#image").attr("src", URL.createObjectURL(e.currentTarget.files[0]));
+                        });
                         document.body.appendChild(clon);
                         $(".wrap-detail").click(function (e) {
                             if (e.currentTarget == e.target) {
