dong bo du lieu food va menu

--- a/views/cms/sidebar.ejs
+++ b/views/cms/sidebar.ejs
@@ -96,17 +96,21 @@
             <i class="fas fa-fw fa-chart-area"></i>
             <span>Charts</span></a>
     </li>
-
+    <li class="nav-item">
+        <a class="nav-link" href="/cms/foods">
+            <i class="fas fa-fw fa-table"></i>
+            <span>Foods</span></a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="/cms/menu">
+            <i class="fas fa-fw fa-table"></i>
+            <span>Menu</span></a>
+    </li>
     <!-- Nav Item - Tables -->
     <li class="nav-item">
         <a class="nav-link" href="tables.html">
             <i class="fas fa-fw fa-table"></i>
             <span>Bills</span></a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="/cms/foods">
-            <i class="fas fa-fw fa-table"></i>
-            <span>Foods</span></a>
     </li>
     <li class="nav-item">
         <a class="nav-link" href="tables.html">
