--- a/views/cms/foods/index.ejs
+++ b/views/cms/foods/index.ejs
@@ -98,7 +98,7 @@
                         <tr>
                             <td><%= index+1 %> </td>
                             <td><img src="/uploads/foods/<%= element.image %>" alt=""
-                                    style="width:150px; height:120px; object-fit:cover"></td>
+                                    style="width:150px; height:120px; object-fit:cover; border-radius: 5px;"></td>
                             <td style="text-align: left;"><%= element.title %> </td>
                             <td style="text-align: right;"><%= element.price %> </td>
                             <td>
@@ -144,7 +144,7 @@
     <div class="wrap-detail">
         <div class="card shadow mb-4">
             <div class="card-header py-3">
-                <h6 class="m-0 font-weight-bold text-primary">Thêm món ăn mới</h6>
+                <h6 class="m-0 font-weight-bold text-primary" id="title_form">Thêm món ăn mới</h6>
             </div>
             <div class="card-body px-lg-5 pt-0">
 
@@ -166,7 +166,7 @@
                         </div>
                         <div class="col-4">
                             <img src="/uploads/foods/default.png" alt="" id="image"
-                                style="width: 100%; height: 110px; object-fit: fill; margin-top: 30px;">
+                                style="width: 100%; height: 110px; object-fit: fill; margin-top: 30px; border-radius: 5px;">
                         </div>
                     </div>
                     <section class="section-preview">
@@ -263,6 +263,7 @@
                     success: function (response) {
                         console.log(response);
                         console.log(temp);
+                        clon.getElementById("title_form").innerText = "Chỉnh sửa";
                         clon.getElementById("title").value = response.title;
                         clon.getElementById("price").value = response.price;
                         clon.getElementById("image").src = "/uploads/foods/" + response.image;
