update them so du, db, ...

--- a/views/cms/baotri/index.ejs
+++ b/views/cms/baotri/index.ejs
@@ -6,7 +6,7 @@
             </h4>
         </div>
         <div class="card-body">
-            <h1>Trạng thái hiện tại: </h1>
+            <h1>Trạng thái hiện tại: <%- data.trangthai %></h1>
             <div class="row">
             <form class="" method="post">
                 <input type="hidden" name="hanhdong" value="on">
