--- a/views/function/navbar.ejs
+++ b/views/function/navbar.ejs
@@ -24,6 +24,9 @@
         <a class="nav-link" href="/dangxuat">Đăng xuất</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" href="/xemsodu">Xem số dư</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="/">Xin chào <%- name %></a>
       </li>
     <% } %>
