--- a/views/function/navbar.ejs
+++ b/views/function/navbar.ejs
@@ -27,6 +27,9 @@
         <a class="nav-link" href="/xemsodu">Xem số dư</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" href="/xemgiohang">Xem giỏ hàng</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="/">Xin chào <%- name %></a>
       </li>
     <% } %>
