--- a/views/themthe.ejs
+++ b/views/themthe.ejs
@@ -1,31 +1,155 @@
 <!DOCTYPE html>
 <html>
-  <%- include("function/header.ejs") %>
+    <head>
+        <title>Thêm thẻ</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1" charset="UTF-8">
+        <link rel="stylesheet" href="w3.css">
+        <style>
+            @media screen and (min-width: 601px) {
+                #full-header {
+                    display: inline-block;
+                }
+                #short-header {
+                    display: none;
+                }
+            }
 
-  </head>
-  <body>
-      <!-- A grey horizontal navbar that becomes vertical on small screens -->
-      <%- include("function/navbar.ejs") %>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-    <h1> <%= status %> </h1>
-    <form method="POST" action="/themthe">
-      <div class="form-group">
-        <label for="">Tên chủ thẻ</label>
-        <input type="text" name="namecard" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter pass">
-        <label for="">Số thẻ</label>
-        <input type="number" name="idbankcard" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter pass">
-        <label for="">Tên ngân hàng</label>
-          <select class="form-control" name="bankname" id="sel1">
-            <option value="Vietcombank">Vietcombank</option>
-            <option value="OCB">OCB</option>
-            <option value="Techcombank">Techcombank</option>
-            <option value="Namabank">Nam á Bank</option>
+            @media screen and (max-width: 600px) {
+                #full-header {
+                    display: none;
+                }
+                #short-header {
+                    display: inline-block;
+                }
+            }
+
+            .footer {
+                font-size: 1.25em;
+            }
+        </style>
+    </head>
+    <body>
+        <!--Header-->
+        <div class="w3-row w3-margin-bottom">
+            <div class="w3-container w3-blue w3-center">
+                <h1 id="full-header" style="font-size: 3em;">Welcome to BK Food Court</h1>
+                <h1 id="short-header" style="font-size: 2em;">BK Food Court</h1>
+            </div>
+        </div>
+
+        <div class="w3-bar w3-light-gray w3-border w3-margin-top">
+            <a href="#" class="w3-bar-item w3-button w3-large w3-border w3-hover-green w3-black">
+                Trang chủ
+            </a>
+            <a href="#" class="w3-bar-item w3-button w3-hide-small w3-large w3-hover-gray">
+                Thêm thẻ
+            </a>
+            <a href="#" class="w3-bar-item w3-button w3-hide-small w3-large w3-hover-gray">
+                Nạp tiền
+            </a>
+            <a href="#" class="w3-bar-item w3-button w3-hide-small w3-large w3-hover-gray">
+                Đăng xuất
+            </a>
+            <a href="#" class="w3-bar-item w3-button w3-hide-small w3-large w3-hover-gray">
+                Xem số dư
+            </a>
+            <a href="#" class="w3-bar-item w3-button w3-hide-small w3-large w3-hover-gray">
+                Xem giỏ hàng
+            </a>
+            <a href="#" class="w3-bar-item w3-button w3-hide-small w3-large w3-hover-gray">
+                Xin chào Admin3
+            </a>
+            <a href="#" class="w3-bar-item w3-button w3-hide-small w3-large w3-hover-gray">
+                Trang cms
+            </a>
+            <a href="javascript:void(0)" class="w3-bar-item w3-button w3-right w3-hide-large w3-hide-medium" onclick="myFunction()">
+                &#9776;
+            </a>
+        </div>
+          
+        <div id="demo" class="w3-bar-block w3-hide w3-hide-large w3-hide-medium">
+            <a href="#" class="w3-bar-item w3-button w3-large w3-hover-gray w3-border w3-light-gray">
+                Thêm thẻ
+            </a>
+            <a href="#" class="w3-bar-item w3-button w3-large w3-hover-gray w3-border w3-light-gray">
+                Nạp tiền
+            </a>
+            <a href="#" class="w3-bar-item w3-button w3-large w3-hover-gray w3-border w3-light-gray">
+                Đăng xuất
+            </a>
+            <a href="#" class="w3-bar-item w3-button w3-large w3-hover-gray w3-border w3-light-gray">
+                Xem số dư
+            </a>
+            <a href="#" class="w3-bar-item w3-button w3-large w3-hover-gray w3-border w3-light-gray">
+                Xem giỏ hàng
+            </a>
+            <a href="#" class="w3-bar-item w3-button w3-large w3-hover-gray w3-border w3-light-gray">
+                Xin chào Admin3
+            </a>
+            <a href="#" class="w3-bar-item w3-button w3-large w3-hover-gray w3-border w3-light-gray">
+                Trang cms
+            </a>
+        </div>
+
+        <!--Body-->
+        <div class="w3-row w3-margin">
+            <div class="w3-card-4">
+                <div class="w3-container w3-brown">
+                    <h2>Thêm thẻ</h2>
+                </div>
+                <form class="w3-container" method="POST" action="/themthe">
+                    <p>      
+                        <label class="w3-text-brown"><b>Tên chủ thẻ</b></label>
+                        <input class="w3-input w3-border w3-sand" name="namecard" type="text" placeholder="Nhập tên chủ thẻ...">
+                    </p>
+                    <p>      
+                        <label class="w3-text-brown"><b>Số thẻ</b></label>
+                        <input class="w3-input w3-border w3-sand" name="idbankcard" type="text" placeholder="Nhập số thẻ ...">
+                    </p>
+                    <p>      
+                        <label class="w3-text-brown"><b>Tên ngân hàng</b></label>
+                        <select class="w3-select w3-border w3-text-brown" name="bankname" id="sel1">
+                            <option value="" disabled selected>Chọn ngân hàng của bạn</option>
+                            <option value="Vietcombank">Vietcombank</option>
+                            <option value="OCB">OCB</option>
+                            <option value="Techcombank">Techcombank</option>
+                            <option value="Namabank">Nam Á Bank</option>
+                        </select>
+                    </p>
+                    <p>
+                        <button type="submit" class="w3-btn w3-brown">Submit</button>
+                    </p>
+                </form>
+              </div>
             
-          </select>
-      </div>
-     
-      <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
-  </body>
+        </div>
+
+        <!--Footer-->
+        <div class="w3-row">
+            <div class="w3-container w3-black w3-center">
+                <h1 class="footer">
+                    Copyright &copy;
+                    <script>
+                        document.write(new Date().getFullYear());
+                    </script> 
+                    BK Food Court
+                </h1>
+
+                <h1 class="footer">
+                    All rights reserved
+                </h1>
+            </div>
+        </div>
+
+        <script>
+            function myFunction() {
+                var x = document.getElementById("demo");
+                if (x.className.indexOf("w3-show") == -1) {
+                    x.className += " w3-show";
+                } else { 
+                    x.className = x.className.replace(" w3-show", "");
+                }
+            }
+        </script>
+    </body>
 </html>
