--- a/views/themthe.ejs
+++ b/views/themthe.ejs
@@ -1,31 +1,171 @@
-<!DOCTYPE html>
-<html>
-  <%- include("function/header.ejs") %>
+<!doctype html>
+<html lang="en">
 
-  </head>
-  <body>
-      <!-- A grey horizontal navbar that becomes vertical on small screens -->
-      <%- include("function/navbar.ejs") %>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-    <h1> <%= status %> </h1>
-    <form method="POST" action="/themthe">
-      <div class="form-group">
-        <label for="">Tên chủ thẻ</label>
-        <input type="text" name="namecard" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter pass">
-        <label for="">Số thẻ</label>
-        <input type="number" name="idbankcard" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter pass">
-        <label for="">Tên ngân hàng</label>
-          <select class="form-control" name="bankname" id="sel1">
-            <option value="Vietcombank">Vietcombank</option>
-            <option value="OCB">OCB</option>
-            <option value="Techcombank">Techcombank</option>
-            <option value="Namabank">Nam á Bank</option>
-            
-          </select>
-      </div>
+<head>
+  <title>Meal &mdash; Website Template by Colorlib</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <link href="https://fonts.googleapis.com/css?family=Playfair+Display:300,400,700,800|Open+Sans:300,400,700"
+    rel="stylesheet">
+
+  <link rel="stylesheet" href="css/bootstrap.css">
+  <link rel="stylesheet" href="css/animate.css">
+  <link rel="stylesheet" href="css/owl.carousel.min.css">
+
+  <link rel="stylesheet" href="css/magnific-popup.css">
+  <link rel="stylesheet" href="css/aos.css">
+
+  <link rel="stylesheet" href="css/bootstrap-datepicker.css">
+  <link rel="stylesheet" href="css/jquery.timepicker.css">
+
+  <link rel="stylesheet" href="fonts/ionicons/css/ionicons.min.css">
+  <link rel="stylesheet" href="fonts/fontawesome/css/font-awesome.min.css">
+
+  <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
+
+  <!-- Theme Style -->
+  <link rel="stylesheet" href="css/style.css">
+
+</head>
+
+<body class="bg-light">
+
+  <body data-spy="scroll" data-target="#ftco-navbar-spy" data-offset="0">
+
+    <div class="site-wrap">
+<!-- nav bar -->
+<%- include("function/navbar.ejs") %>
+
+
+      
      
-      <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
+
+
+       <!-- .section Nạp tiền -->
+
+        <div class="section pb-3 bg-white" id="section-naptien" data-aos="fade-up">
+          <div class="container">
+            <div class="row align-items-center justify-content-center">
+              <div class="col-md-12 col-lg-8 section-heading">
+                <h2 class="heading mb-5"><%= status %> </h2>
+                <form method="POST" action="/themthe">
+                  <div class="form-group">
+                    <label for="">Tên chủ thẻ</label>
+                    <input type="text" name="namecard" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter pass">
+                    <label for="">Số thẻ</label>
+                    <input type="number" name="idbankcard" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter pass">
+                    <label for="">Tên ngân hàng</label>
+                      <select class="form-control" name="bankname" id="sel1">
+                        <option value="Vietcombank">Vietcombank</option>
+                        <option value="OCB">OCB</option>
+                        <option value="Techcombank">Techcombank</option>
+                        <option value="Namabank">Nam á Bank</option>
+                        
+                      </select>
+                  </div>
+                 
+                  <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
+            
+              </div>
+            </div>
+          </div>
+        </div> <!-- .section -->
+      </div> <!-- .section -->
+
+
+    <div class="map-wrap" id="map" data-aos="fade" style="background-color: white;"></div>
+
+
+    <footer class="ftco-footer">
+      <div class="container">
+
+        <div class="row">
+          <div class="col-md-4 mb-5">
+            <div class="footer-widget">
+              <h3 class="mb-4">About Meal</h3>
+              <p>The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks
+                and devious Semikoli, but the Little Blind Text didn’t listen. </p>
+
+              <p><a href="#" class="btn btn-primary btn-outline-primary">Read More</a></p>
+            </div>
+          </div>
+          <div class="col-md-4 mb-5">
+            <div class="footer-widget">
+              <h3 class="mb-4">Lunch Service</h3>
+              <p>Booking from 12:00pm &mdash; 1:30pm</p>
+              <h3 class="mb-4">Dinner Service</h3>
+              <p>Everyday: <br> Booking from 6:00pm &mdash; 9:00pm</p>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="footer-widget">
+              <h3 class="mb-4">Follow Along</h3>
+              <ul class="list-unstyled social">
+                <li><a href="#"><span class="fa fa-tripadvisor"></span></a></li>
+                <li><a href="#"><span class="fa fa-twitter"></span></a></li>
+                <li><a href="#"><span class="fa fa-facebook"></span></a></li>
+                <li><a href="#"><span class="fa fa-instagram"></span></a></li>
+              </ul>
+            </div>
+            <div class="footer-widget">
+              <h3 class="mb-4">Newsletter</h3>
+              <form action="#" class="ftco-footer-newsletter">
+                <div class="form-group">
+                  <button class="button"><span class="fa fa-envelope"></span></button>
+                  <input type="email" class="form-control" placeholder="Enter Email">
+                </div>
+              </form>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="row pt-5">
+          <div class="col-md-12 text-center">
+            <p>
+              <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+              Copyright &copy;
+              <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made
+              with <i class="fa fa-heart text-danger" aria-hidden="true"></i> by <a href="https://colorlib.com"
+                target="_blank">Colorlib</a>
+              <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+            </p>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+    </div>
+
+    <!-- loader -->
+    <div id="loader" class="show fullscreen"><svg class="circular" width="48px" height="48px">
+        <circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" />
+        <circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10"
+          stroke="#ff7a5c" /></svg></div>
+
+    <script src="js/jquery-3.2.1.min.js"></script>
+    <script src="js/jquery-migrate-3.0.1.min.js"></script>
+    <script src="js/popper.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
+    <script src="js/jquery.waypoints.min.js"></script>
+
+    <script src="js/bootstrap-datepicker.js"></script>
+    <script src="js/jquery.timepicker.min.js"></script>
+    <script src="js/jquery.stellar.min.js"></script>
+
+    <script src="js/jquery.easing.1.3.js"></script>
+
+    <script src="js/aos.js"></script>
+
+
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
+
+    <script src="js/main.js"></script>
   </body>
+
 </html>
