--- a/views/xemgiohang.ejs
+++ b/views/xemgiohang.ejs
@@ -1,70 +1,208 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <%- include("function/header.ejs") %>
+<!doctype html>
+<html lang="en">
 
-  </head>
-  <body>
-      <!-- A grey horizontal navbar that becomes vertical on small screens -->
+<head>
+  <title>Meal &mdash; Website Template by Colorlib</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <link href="https://fonts.googleapis.com/css?family=Playfair+Display:300,400,700,800|Open+Sans:300,400,700"
+    rel="stylesheet">
+
+  <link rel="stylesheet" href="css/bootstrap.css">
+  <link rel="stylesheet" href="css/animate.css">
+  <link rel="stylesheet" href="css/owl.carousel.min.css">
+
+  <link rel="stylesheet" href="css/magnific-popup.css">
+  <link rel="stylesheet" href="css/aos.css">
+
+  <link rel="stylesheet" href="css/bootstrap-datepicker.css">
+  <link rel="stylesheet" href="css/jquery.timepicker.css">
+
+  <link rel="stylesheet" href="fonts/ionicons/css/ionicons.min.css">
+  <link rel="stylesheet" href="fonts/fontawesome/css/font-awesome.min.css">
+
+  <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
+
+  <!-- Theme Style -->
+  <link rel="stylesheet" href="css/style.css">
+
+</head>
+
+<body class="bg-light">
+
+  <body data-spy="scroll" data-target="#ftco-navbar-spy" data-offset="0">
+
+    <div class="site-wrap">
+      <!-- nav bar -->
       <%- include("function/navbar.ejs") %>
-    <!-- menu foods start -->
-    <div class="container-fluid">
-      <div class="card shadow mb-4">
-          <div class="card-header py-3 row">
-              <h4 class="m-0 font-weight-bold text-primary">Menu
-              </h4> 
-              <form action="/thanhtoan" method="post" class="col-4" >
-                <button class="btn btn-primary" type="submit" style="float: left;">Thanh toán</button>
-              </form>    
+
+
+
+      <div class="section pb-3 bg-white" id="section-naptien" data-aos="fade-up">
+        <div class="container">
+          <div class="row align-items-center justify-content-center">
+            <div class="col-md-12 col-lg-8 section-heading">
+         
+
+               <!-- menu foods start -->
+               
+    <div class="section bg-light" id="section-menu" style="background-color: white !important;" data-aos="fade-up">
+      <div class="container">
+        <div class="row section-heading justify-content-center mb-5">
+          <div class="col-md-8 text-center">
           </div>
-          <div class="card-body">
-              <div class="border border-light p-md-2" id="menu" method="POST" action="/cms/menu" enctype="application/x-www-form-urlencoded">
-                  <div class="form-row mb-4">   
-                      <% data.forEach(element => { %>
-                      <div class="col-lg-6 col-12 mb-2">
-                          <div class="card border-left-primary shadow h-100 py-2 d-flex flex-row">
-                              <img src="/uploads/foods/<%= element.image %>"
-                                  style="width: 25%; height: 140px; border-radius: 5px; margin-left: 8px;" alt="">
-                              <div class="card-body">
-                                  <div class="row no-gutters align-items-center">
-                                      <div class="col mr-2">
-                                          <div class="text-md font-weight-bold text-primary text-uppercase mb-1">
-                                              <%= element.title %> </div>
-                                          <div class="h5 mb-0 font-weight-bold text-gray-800"><%= element.price %> vnđ </div>
-                                      </div>
-                                      <div class="col-auto">
-                                          <i class="fas fa-calendar fa-2x text-gray-300"></i>
-                                      </div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-md-8">
+           
+            <div class="tab-content" id="pills-tabContent">
+              <div class="tab-pane fade show active" id="pills-breakfast" role="tabpanel"
+                aria-labelledby="pills-breakfast-tab">
+                
+                
+                <% data.forEach(element => { %>
+                  <div class="row">
+                      <div class="card border-left-primary shadow h-100 py-2 d-flex flex-row">
+                          <img src="/uploads/foods/<%= element.image %>"
+                              style="width: 25%; height: 140px; border-radius: 5px; margin-left: 8px;" alt="">
+                          <div class="card-body">
+                              <div class="row no-gutters align-items-center">
+                                  <div class="col mr-2">
+                                      <div class="text-md font-weight-bold text-primary text-uppercase mb-1">
+                                          <%= element.title %> </div>
+                                      <div class="h5 mb-0 font-weight-bold text-gray-800"><%= element.description %> vnđ </div>
                                   </div>
-                                  <div class="row d-flex align-items-end justify-content-end mt-2 ">
-                                    <form id="themvaogiohang" method="post" action="/">
-                                      <label>Số lượng</label>
-                                      <input class="amount" type="number" class="form-control" name='amount'
-                                          style="width: 100px;"  min='1' ; value="<%= element.soluong %>">
-                                          <input type="hidden" name="idfood" value="<%= element.foodID %> ">
-                                          <button type="submit" class="btn-primary btn">Cap nhat</button>
-                                        </form>
-                                  </div>
+                                 
+                              </div>
+                              <div class="row d-flex align-items-end justify-content-end mt-2 ">
+                                <form id="themvaogiohang" method="post" action="/">
+                                  <label>Số lượng</label>
+                                  <input class="amount" type="number" class="form-control" name='amount' style="width: 100px;"
+                                    min='1' ; value="<%= element.soluong %>">
+                                  <input type="hidden" name="idfood" value="<%= element.foodID %> ">
+                                  <!-- <button type="submit" class="btn-primary btn"></button> -->
+                                </form>
                               </div>
                           </div>
                       </div>
-  
-                      <% }) %>
                   </div>
-  
-                </div>
-          </div>
-      </div>
-  
-  
-  </div>
-    <!-- menu foods end -->
+                  <br>
+                  <% }) %>
+           
 
-    <p>Welcome to <%= title %></p>
-    <script >
-      $(".themvaogiohang").submit(function(e){
-        e.preventDefault();
-      })
-    </script>
+            </div>
+          </div>
+          <div class="abcd">
+            <form action="/thanhtoan" method="post" class="col-4">
+              <button class="btn btn-primary" type="submit" style="float: left;">Thanh toán</button>
+            </form>
+           </div>
+
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div> <!-- .section -->
+
+    
+    </div>
+  </div>
+</div>
+</div>
+
+
+
+      <footer class="ftco-footer">
+        <div class="container">
+
+          <div class="row">
+            <div class="col-md-4 mb-5">
+              <div class="footer-widget">
+                <h3 class="mb-4">About Meal</h3>
+                <p>The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question
+                  Marks
+                  and devious Semikoli, but the Little Blind Text didn’t listen. </p>
+
+                <p><a href="#" class="btn btn-primary btn-outline-primary">Read More</a></p>
+              </div>
+            </div>
+            <div class="col-md-4 mb-5">
+              <div class="footer-widget">
+                <h3 class="mb-4">Lunch Service</h3>
+                <p>Booking from 12:00pm &mdash; 1:30pm</p>
+                <h3 class="mb-4">Dinner Service</h3>
+                <p>Everyday: <br> Booking from 6:00pm &mdash; 9:00pm</p>
+              </div>
+            </div>
+
+            <div class="col-md-4">
+              <div class="footer-widget">
+                <h3 class="mb-4">Follow Along</h3>
+                <ul class="list-unstyled social">
+                  <li><a href="#"><span class="fa fa-tripadvisor"></span></a></li>
+                  <li><a href="#"><span class="fa fa-twitter"></span></a></li>
+                  <li><a href="#"><span class="fa fa-facebook"></span></a></li>
+                  <li><a href="#"><span class="fa fa-instagram"></span></a></li>
+                </ul>
+              </div>
+              <div class="footer-widget">
+                <h3 class="mb-4">Newsletter</h3>
+                <form action="#" class="ftco-footer-newsletter">
+                  <div class="form-group">
+                    <button class="button"><span class="fa fa-envelope"></span></button>
+                    <input type="email" class="form-control" placeholder="Enter Email">
+                  </div>
+                </form>
+              </div>
+            </div>
+
+          </div>
+
+          <div class="row pt-5">
+            <div class="col-md-12 text-center">
+              <p>
+                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                Copyright &copy;
+                <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made
+                with <i class="fa fa-heart text-danger" aria-hidden="true"></i> by <a href="https://colorlib.com"
+                  target="_blank">Colorlib</a>
+                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+              </p>
+            </div>
+          </div>
+        </div>
+      </footer>
+
+    </div>
+
+    <!-- loader -->
+    <div id="loader" class="show fullscreen"><svg class="circular" width="48px" height="48px">
+        <circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" />
+        <circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10"
+          stroke="#ff7a5c" /></svg></div>
+
+    <script src="js/jquery-3.2.1.min.js"></script>
+    <script src="js/jquery-migrate-3.0.1.min.js"></script>
+    <script src="js/popper.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
+    <script src="js/jquery.waypoints.min.js"></script>
+
+    <script src="js/bootstrap-datepicker.js"></script>
+    <script src="js/jquery.timepicker.min.js"></script>
+    <script src="js/jquery.stellar.min.js"></script>
+
+    <script src="js/jquery.easing.1.3.js"></script>
+
+    <script src="js/aos.js"></script>
+
+
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
+
+    <script src="js/main.js"></script>
   </body>
+
 </html>
