them dau bep nhan vien

--- a/views/function/js/vendorquanlynguoidung.ejs
+++ b/views/function/js/vendorquanlynguoidung.ejs
@@ -225,6 +225,7 @@
                         $("#divusername").hide();
                         $('#flag').val("nhanvien");
 
+                        $('#divtenquay').hide();
                         $('#submitForm').hide();
                         $('#editForm').show();
                         $(".btn2").show();
