--- a/views/function/navbar.ejs
+++ b/views/function/navbar.ejs
@@ -39,6 +39,11 @@
         <a class="nav-link" href="/cms/">Trang cms</a>
       </li>
     <% } %>
+    <% if (role == 'vendor'){ %>
+      <li class="nav-item">
+        <a class="nav-link" href="/cms/quanlynguoidung">Trang quản lý nhân viên</a>
+      </li>
+    <% } %>
   </ul>
 </div>
 </nav>
