--- a/views/vendorquanly.ejs
+++ b/views/vendorquanly.ejs
@@ -11,7 +11,7 @@
     <div id="wrapper">
 
         <!-- Sidebar -->
-        <% include cms/sidebar %>
+        <% include function/js/sidebar %>
         <!-- End of Sidebar -->
 
         <!-- Content Wrapper -->
