--- a/views/index.ejs
+++ b/views/index.ejs
@@ -164,6 +164,7 @@
 <script>
   //id="myform" action="/themvaogiohang" method="post" 
 </script>
+<%- include("notification/noti") %> 
   </body>
 
 </html>
