--- a/views/xemgiohang.ejs
+++ b/views/xemgiohang.ejs
@@ -160,7 +160,7 @@
     }
 
     .product .product-quantity input {
-      width: 40px;
+      width: 60px;
     }
 
     .product .remove-product {
@@ -246,7 +246,7 @@
 
       .product-price {
         clear: both;
-        width: 70px;
+        width: 75px;
       }
 
       .product-quantity {
@@ -257,8 +257,8 @@
         margin-left: 20px;
       }
 
-      .product-quantity:before {
-        content: 'x';
+      .product-amount:before {
+        content: 'stock:';
       }
 
       .product-removal {
@@ -267,7 +267,7 @@
 
       .product-line-price {
         float: right;
-        width: 70px;
+        width: 75px;
       }
     }
 
