--- a/views/adminquanlynguoidung.ejs
+++ b/views/adminquanlynguoidung.ejs
@@ -29,10 +29,11 @@
                                             <div class="row">
                                                 <a id="vendor" href="" class="m-0 font-weight-bold text-primary" style="padding: 10px; background-color:lightblue  ;">Vendor</a>
                                                 <a id="thungan" href="" class="m-0 font-weight-bold text-primary" style="padding: 10px;">Thu ngân</a>
-                                                <button id="update" style="display: none;" class="btn btn-success">Update</button>
-                                                <button id="updatethungan" style="display: none;" class="btn btn-success">Update thu ngân</button>
-                                                <button id="suavendor" style="display: none;" class="btn btn-success">Sửa vendor</button>
-                                                <button id="suathungan" style="display: none;" class="btn btn-success">Sửa thu ngân</button>
+                                                <button id="update" style="display: none;" class="btn btn-success"></button>
+                                                <button id="updatethungan" style="display: none;" class="btn btn-success"></button>
+                                                <button id="suavendor" style="display: none;" class="btn btn-success"></button>
+                                                <button id="suathungan" style="display: none;" class="btn btn-success"></button>
+                                               
 
                                             </div>
                                             <h4 class="m-0 font-weight-bold text-primary" id="status">
