--- a/views/cms/sidebar.ejs
+++ b/views/cms/sidebar.ejs
@@ -149,7 +149,12 @@
                         <li class="nav-item">
                             <a class="nav-link" href="/cms/quanlynguoidung">
                                 <i class="fas fa-fw fa-chart-area"></i>
-                                <span>Quản lý</span></a>
+                                <span>Quản lý vendor/thu ngân</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/cms/cmsquanlyuser">
+                                <i class="fas fa-fw fa-chart-area"></i>
+                                <span>Quản lý user</span></a>
                         </li>
                         <% } %>
                             <!-- Divider -->
