--- a/views/dangki.ejs
+++ b/views/dangki.ejs
@@ -51,18 +51,12 @@
                 <form method="POST" action="/dangki">
                   <div class="form-group">
                     <label for="">User name</label>
-                    <input type="text" name="usr" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter usr">
+                    <input type="text" name="usr" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter username">
                     <label for="">Password</label>
-                    <input type="password" name="pass" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter pass">
+                    <input type="password" name="pass" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter password">
                     <label for="">Phone</label>
-                    <input type="number" name="phone" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter pass">
-                    <label for="">Role</label>
-                      <select class="form-control" name="role" id="sel1">
-                        <option value="user">User</option>
-                        <option value="admin">Admin</option>
-                        
-                      </select>
-                  </div>
+                    <input type="number" name="phone" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter phone number">
+                    
                  
                   <button type="submit" class="btn btn-primary">Submit</button>
                 </form>
