--- a/views/function/navbar.ejs
+++ b/views/function/navbar.ejs
@@ -32,6 +32,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="/">Xin chào <%- name %></a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/danhgia">Đánh giá</a>
+                        </li>
 
                         <% if (role == 'daubep'){ %>
                             <li class="nav-item">
