fix trang nap tien

--- a/views/naptien.ejs
+++ b/views/naptien.ejs
@@ -98,7 +98,7 @@
                    document.getElementsByName('amount').value = '';
                   
               }else if(result == 'success'){
-                $("#status").html('Sai mật khẩu');
+                $("#status").html('Nạp tiền thành công');
                    document.getElementsByName('amount').value = '';
                    
               } else if(result == 'lessthan10k') {
